--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Jitender Jangra's Protfolio</h1>
+    <h1>Jitender Jangra's Portfolio</h1>
     <h2>I am not a web developer</h2>
     <hr/>
     <a href = "./public/movie-ranking.html">Movie Ranking Project</a>
